[project]
name = "dwi-fit"
version = "1.0.0a"
authors = [
    {name = "Lucas da Costa", email = "lcscosta@disroot.org"},
]
description = "A simple program to fit diffusion weighted images."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "pyQt6"
]

[project.scripts]
dwi-fit = "dwi_fit.main:main"
